--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <tr>My Social Networks</tr>
       </thead>
       <tbody>
-        <tr><td>Linkedin</td><td>https://www.linkedin.com/in/sandraburlinge//</td></tr>
+        <tr><td>Linkedin</td><td>https://www.linkedin.com/in/sandraburlinge/</td></tr>
     
       </tbody>
       <tfoot>
