--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <p>
     The picture above is from skiining in France this winter. I am a fan of skiing and trying to go to Lake Tahoe at least once a month during winter time. 
   </p>
-
   <h3>Where can you find me?</h3>
   <p>
     <table border="1">
@@ -27,7 +26,7 @@
         <tr>My Social Networks</tr>
       </thead>
       <tbody>
-        <tr><td>Linkedin</td><td>https://www.linkedin.com/in/sandraburlinge/</td></tr>
+        <tr><td>Linkedin</td><td><a href="https://www.linkedin.com/in/sandraburlinge/" target="blank"> https://www.linkedin.com/in/sandraburlinge/</a></td></tr>
     
       </tbody>
       <tfoot>
